
[package]
edition = "2021"
name = "ms-core"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.24.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
