
[package]
edition = "2024"
name = "ms-core"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.8.3"
napi-derive = "3.5.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
uuid = "1.10.0"
anyhow = "1.0.86"

[dev-dependencies]
tempfile = "3.10.1"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
strip = "symbols"
